Fix #106023: File Browser Lists with Incomplete Previews

Ensure all File Browser list items get previews.